# Snippets-Manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  create_png_icon.py  generate_icon.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
resources/: icon.rc  resources.qrc  snippetmanager.desktop
src/: database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  snippetmodel.cpp  snippetmodel.h
